--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -735,6 +735,7 @@
      "iopub.status.idle": "2024-03-18T03:05:13.487647Z",
      "shell.execute_reply": "2024-03-18T03:05:13.486941Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.013807,
      "end_time": "2024-03-18T03:05:13.489288",
@@ -767,6 +768,55 @@
     "assert Solution().minimumDeletions(\"aabcaba\", 0) == 3\n",
     "assert Solution().minimumDeletions(\"dabdcbdcdcd\", 2) == 2\n",
     "assert Solution().minimumDeletions(\"aaabaaa\", 2) == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32c6f9ab",
+   "metadata": {},
+   "source": [
+    "Leetcode Weekly contest - 17th March\n",
+    "Link: https://leetcode.com/problems/search-in-rotated-sorted-array/submissions/1210464524/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a3f57c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def search(self, nums: List[int], target: int) -> int:\n",
+    "        N = len(nums)\n",
+    "        low, high = 0, N - 1\n",
+    "        while low <= high:\n",
+    "            mid = (low + high) // 2\n",
+    "            if nums[mid] == target:\n",
+    "                return mid\n",
+    "\n",
+    "            # Left portion is sorted\n",
+    "            elif nums[low] <= nums[mid]:\n",
+    "                if nums[low] <= target <= nums[mid]:\n",
+    "                    high = mid - 1\n",
+    "                else:\n",
+    "                    low = mid + 1\n",
+    "\n",
+    "            # Right portion is sorted\n",
+    "            else:\n",
+    "                if nums[mid] <= target <= nums[high]:\n",
+    "                    low = mid + 1\n",
+    "                else:\n",
+    "                    high = mid - 1\n",
+    "\n",
+    "        # Not found\n",
+    "        else:\n",
+    "            return -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().search([4,5,6,7,0,1,2], 0) == 4\n",
+    "assert Solution().search([4,5,6,7,0,1,2], 3) == -1\n",
+    "assert Solution().search([1], 0) == -1"
    ]
   }
  ],
