--- a/study/striver-A2Z/09-binary-search.ipynb
+++ b/study/striver-A2Z/09-binary-search.ipynb
@@ -942,6 +942,7 @@
      "iopub.status.idle": "2024-03-21T15:53:56.846091Z",
      "shell.execute_reply": "2024-03-21T15:53:56.845339Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.018568,
      "end_time": "2024-03-21T15:53:56.847860",
@@ -964,7 +965,7 @@
     }
    ],
    "source": [
-    "def search(arr: list[int], target: int) -> int:\n",
+    "def search_rotated_sorted1(arr: list[int], target: int) -> int:\n",
     "    N = len(arr)\n",
     "    low, high = 0, N - 1\n",
     "    while low <= high:\n",
@@ -990,7 +991,107 @@
     "    else:\n",
     "        return -1\n",
     "\n",
-    "search([7, 8, 9, 1, 2, 3, 4, 5, 6], 6)"
+    "search_rotated_sorted1([7, 8, 9, 1, 2, 3, 4, 5, 6], 6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd5e97f9",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=w2G2W8l__pc&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=49\n",
+    "Search in rotated sorted arrays (with duplicates)\n",
+    "Leetcode link: https://leetcode.com/problems/search-in-rotated-sorted-array-ii/submissions/1210474431/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "310f82f5",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Time complexity: O(n / 2)\n",
+    "# If there are a lot of duplicates we might need to need to trim the left/right\n",
+    "# repeatedly until arr[left] != arr[mid] != arr[right]\n",
+    "def search_rotated_sorted2(arr: list[int], target: int) -> bool:\n",
+    "    N = len(arr)\n",
+    "    low, high = 0, N - 1\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        if arr[mid] == target:\n",
+    "            return True\n",
+    "\n",
+    "        # Special Case - [3, 1, 2, 3, 3, 3, 3, 3], eliminating left or right is not possible\n",
+    "        elif arr[low] == arr[mid] == arr[high]:\n",
+    "            low, high = low + 1, high - 1\n",
+    "\n",
+    "        # Left half is sorted\n",
+    "        elif arr[low] <= arr[mid]:\n",
+    "            # Element can be found in the left half\n",
+    "            if arr[low] <= target <= arr[mid]:\n",
+    "                high = mid - 1\n",
+    "            else:\n",
+    "                low = mid + 1\n",
+    "\n",
+    "        # Right half is sorted\n",
+    "        else:\n",
+    "            # Element can be found in the right half\n",
+    "            if arr[mid] <= target <= arr[high]:\n",
+    "                low = mid + 1\n",
+    "            else:\n",
+    "                high = mid - 1\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "search_rotated_sorted2([3, 1, 2, 3, 3, 3, 3], 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6657c71c",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=nhEMDKMB44g&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=50\n",
+    "Leetcode: https://leetcode.com/problems/find-minimum-in-rotated-sorted-array/submissions/1210490796"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b50d9ac8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def findMin(self, nums: list[int]) -> int:\n",
+    "        N = len(nums)\n",
+    "        low, high, ans = 0, N - 1, nums[0]\n",
+    "        while low <= high:\n",
+    "            mid = (low + high) // 2\n",
+    "            # Left half and right half is sorted (happens when we have crossed the pivot point or if the array was rotated 0 times)\n",
+    "            if nums[low] < nums[mid] < nums[high]:\n",
+    "                ans = min(ans, nums[low])\n",
+    "                low, high = mid + 1, mid - 1\n",
+    "\n",
+    "            # Left half is sorted, take the min from left half and trim search space to the right half\n",
+    "            elif nums[low] <= nums[mid]:\n",
+    "                ans = min(ans, nums[low])\n",
+    "                low = mid + 1\n",
+    "\n",
+    "            # Right half is sorted, take the min from the right half and trim search space to the left half\n",
+    "            else:\n",
+    "                ans = min(ans, nums[mid])\n",
+    "                high = mid - 1\n",
+    "\n",
+    "        return ans\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().findMin([3,4,5,1,2]) == 1\n",
+    "assert Solution().findMin([4,5,6,7,0,1,2]) == 0\n",
+    "assert Solution().findMin([11,13,15,17]) == 11"
    ]
   }
  ],
