--- a/study/striver-A2Z/09-binary-search.ipynb
+++ b/study/striver-A2Z/09-binary-search.ipynb
@@ -1151,6 +1151,143 @@
     "assert Solution().findMin([4,5,6,7,0,1,2]) == 0\n",
     "assert Solution().findMin([11,13,15,17]) == 11"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2e4d69a",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=jtSiWTPLwd0&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=51\n",
+    "Count number of times an array has been rotated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f854c012",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = [2, 3, 4, 5, 1]\n",
+    "N = len(arr)\n",
+    "low, high, ans = 0, N - 1, 0\n",
+    "while low <= high:\n",
+    "    mid = (low + high) // 2\n",
+    "    if arr[low] <= arr[mid]:\n",
+    "        if arr[ans] > arr[low]:\n",
+    "            ans = low\n",
+    "        low = mid + 1\n",
+    "    else:\n",
+    "        if arr[ans] > arr[mid]:\n",
+    "            ans = mid\n",
+    "        high = mid - 1\n",
+    "\n",
+    "ans"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5769e9e8",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=AZOmHuHadxQ&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=52\n",
+    "Leetcode link: https://leetcode.com/problems/single-element-in-a-sorted-array/submissions/1211393503"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1abaf5dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Brute force approach\n",
+    "# Time - O(N)\n",
+    "arr = [1, 1, 2, 2, 3, 3, 4, 5, 5, 6, 6]\n",
+    "res = 0\n",
+    "for i in arr:\n",
+    "    res ^= i\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69d77039",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Better approach: O(log N)\n",
+    "\"\"\"\n",
+    "[1, 2, 2]\n",
+    "[1, 1, 2]\n",
+    "[1, 2, 2, 3, 3]\n",
+    "[1, 1, 2, 3, 3]\n",
+    "[1, 1, 2, 2, 3]\n",
+    "[1, 2, 2, 3, 3, 4, 4]\n",
+    "[1, 1, 2, 3, 3, 4, 4]\n",
+    "[1, 1, 2, 2, 3, 4, 4]\n",
+    "[1, 1, 2, 2, 3, 3, 4]\n",
+    "# if mid is odd, mid - 1, mid should be same for left to be okay: low = mid + 1 / high = mid + 1\n",
+    "# if mid is even, mid, mid + 1 should be the same for left to be okay: low = mid / high = mid\n",
+    "\"\"\"\n",
+    "arr = [1, 1, 2, 2, 3, 3, 4, 5, 5, 6, 6]\n",
+    "N = len(arr)\n",
+    "low, high = 0, N - 1\n",
+    "while low < high:\n",
+    "    mid = (low + high) // 2\n",
+    "    if mid % 2 == 0:\n",
+    "        if arr[mid] == arr[mid + 1]:\n",
+    "            low = mid\n",
+    "        else:\n",
+    "            high = mid\n",
+    "    else:\n",
+    "        if arr[mid] == arr[mid - 1]:\n",
+    "            low = mid + 1\n",
+    "        else:\n",
+    "            high = mid - 1\n",
+    "\n",
+    "arr[low]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1879fb32",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=cXxmbemS6XM&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=53\n",
+    "Find Peak element"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7126b9cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findPeakElement(arr: [int]) -> int:\n",
+    "    N = len(arr)\n",
+    "    low, high = 0, N - 1\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        l, m, r = arr[mid - 1] if mid > 0 else -math.inf, arr[mid], arr[mid + 1] if mid < N - 1 else -math.inf\n",
+    "        if l <  m > r:\n",
+    "            return mid\n",
+    "        elif l < m < r:\n",
+    "            low = mid + 1\n",
+    "        # handles both cases - l > m > r and l > m < r\n",
+    "        # If the case is l > m < r, multiple peak exists, going any dir we would be able to reach a peak\n",
+    "        else:\n",
+    "            high = mid - 1\n",
+    "    return -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findPeakElement([1, 2, 3, 1]) == 2\n",
+    "assert findPeakElement([1,2,1,3,5,6,4]) == 5"
+   ]
   }
  ],
  "metadata": {
