Striver A2Z: Binary Search - 6

--- a/study/striver-A2Z/09-binary-search.ipynb
+++ b/study/striver-A2Z/09-binary-search.ipynb
@@ -1376,6 +1376,7 @@
      "iopub.status.idle": "2024-03-23T16:33:33.903162Z",
      "shell.execute_reply": "2024-03-23T16:33:33.902500Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.018676,
      "end_time": "2024-03-23T16:33:33.904785",
@@ -1406,6 +1407,43 @@
     "# Testing the solution\n",
     "assert findPeakElement([1, 2, 3, 1]) == 2\n",
     "assert findPeakElement([1,2,1,3,5,6,4]) == 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "399ae8e1",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=Bsv3FPUX_BA&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=54\n",
+    "Square root of a number using binary search\n",
+    "Take home:\n",
+    "\n",
+    "1. For questions involving patterns where ans is possible uptil a certain extent and post which answers are not possible, we can apply our binary search algorithm (we always know the range of possible answers)\n",
+    "2. When we are having regions of possible and not possible like so: [ans, ans, ans, not ans, not ans] - at the end of binary search, low will end up pointing at a position that is 1 greater than the ans (3) while high will end up pointing at the ans (2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64144c7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def floorSqrt(n: int) -> int:\n",
+    "    'Time - O(log n)'\n",
+    "    low, high = 1, n\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        if mid * mid > n:\n",
+    "            high = mid - 1\n",
+    "        else:\n",
+    "            low = mid + 1\n",
+    "\n",
+    "    return high\n",
+    "\n",
+    "# Testing the solution\n",
+    "for i in tqdm.tqdm(range(int(1e4))):\n",
+    "    assert floorSqrt(i) == int(math.sqrt(i))"
    ]
   }
  ],
