--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -2,23 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "1c40ad22",
+   "execution_count": null,
+   "id": "3f12b031",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-22T02:08:58.301583Z",
-     "iopub.status.busy": "2024-03-22T02:08:58.300937Z",
-     "iopub.status.idle": "2024-03-22T02:08:58.829657Z",
-     "shell.execute_reply": "2024-03-22T02:08:58.828959Z"
-    },
     "papermill": {
      "duration": 0.539915,
      "end_time": "2024-03-22T02:08:58.831758",
      "exception": false,
      "start_time": "2024-03-22T02:08:58.291843",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "outputs": [],
    "source": [
@@ -55,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fb8e6c0",
+   "id": "7f5a0241",
    "metadata": {
     "papermill": {
      "duration": 0.207699,
@@ -63,8 +56,7 @@
      "exception": false,
      "start_time": "2024-03-22T02:08:58.837319",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "source": [
     "#### Helper for Binary tree problems"
@@ -72,15 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "5cff3cee",
+   "execution_count": null,
+   "id": "85eb2598",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-22T02:08:59.058397Z",
-     "iopub.status.busy": "2024-03-22T02:08:59.057662Z",
-     "iopub.status.idle": "2024-03-22T02:08:59.067566Z",
-     "shell.execute_reply": "2024-03-22T02:08:59.066737Z"
-    },
     "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.018144,
@@ -88,8 +74,7 @@
      "exception": false,
      "start_time": "2024-03-22T02:08:59.051332",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "outputs": [],
    "source": [
@@ -143,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a05e040",
+   "id": "1ef703cf",
    "metadata": {
     "papermill": {
      "duration": 0.00493,
@@ -151,8 +136,7 @@
      "exception": false,
      "start_time": "2024-03-22T02:08:59.074531",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "source": [
     "#### Helper for Singly Linked lists"
@@ -160,15 +144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "97e5cff8",
+   "execution_count": null,
+   "id": "3de163a1",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-22T02:08:59.090877Z",
-     "iopub.status.busy": "2024-03-22T02:08:59.090298Z",
-     "iopub.status.idle": "2024-03-22T02:08:59.096579Z",
-     "shell.execute_reply": "2024-03-22T02:08:59.095843Z"
-    },
     "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.013708,
@@ -176,8 +154,7 @@
      "exception": false,
      "start_time": "2024-03-22T02:08:59.084417",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "outputs": [],
    "source": [
@@ -214,15 +191,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "fa9ec8f3",
+   "execution_count": null,
+   "id": "e9a621b3",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-22T02:08:59.109562Z",
-     "iopub.status.busy": "2024-03-22T02:08:59.108994Z",
-     "iopub.status.idle": "2024-03-22T02:08:59.115879Z",
-     "shell.execute_reply": "2024-03-22T02:08:59.115089Z"
-    },
     "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.014571,
@@ -230,8 +201,7 @@
      "exception": false,
      "start_time": "2024-03-22T02:08:59.103122",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "outputs": [],
    "source": [
@@ -263,15 +233,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "c8266d81",
+   "execution_count": null,
+   "id": "9b733058",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-22T02:08:59.129226Z",
-     "iopub.status.busy": "2024-03-22T02:08:59.128647Z",
-     "iopub.status.idle": "2024-03-22T02:08:59.135018Z",
-     "shell.execute_reply": "2024-03-22T02:08:59.134380Z"
-    },
     "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.013909,
@@ -279,8 +243,7 @@
      "exception": false,
      "start_time": "2024-03-22T02:08:59.122733",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "outputs": [],
    "source": [
@@ -309,15 +272,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "c16e336b",
+   "execution_count": null,
+   "id": "d0726800",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-22T02:08:59.147899Z",
-     "iopub.status.busy": "2024-03-22T02:08:59.147318Z",
-     "iopub.status.idle": "2024-03-22T02:08:59.152536Z",
-     "shell.execute_reply": "2024-03-22T02:08:59.151779Z"
-    },
     "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.012617,
@@ -325,8 +282,7 @@
      "exception": false,
      "start_time": "2024-03-22T02:08:59.141574",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "outputs": [],
    "source": [
@@ -346,15 +302,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "978d44e4",
+   "execution_count": null,
+   "id": "a61be2aa",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-22T02:08:59.165768Z",
-     "iopub.status.busy": "2024-03-22T02:08:59.165215Z",
-     "iopub.status.idle": "2024-03-22T02:08:59.172896Z",
-     "shell.execute_reply": "2024-03-22T02:08:59.172175Z"
-    },
     "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.015387,
@@ -362,8 +312,7 @@
      "exception": false,
      "start_time": "2024-03-22T02:08:59.159301",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "outputs": [],
    "source": [
@@ -396,15 +345,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "82dc674b",
+   "execution_count": null,
+   "id": "f1f33401",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-22T02:08:59.185985Z",
-     "iopub.status.busy": "2024-03-22T02:08:59.185507Z",
-     "iopub.status.idle": "2024-03-22T02:08:59.192873Z",
-     "shell.execute_reply": "2024-03-22T02:08:59.192230Z"
-    },
     "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.015528,
@@ -412,8 +355,7 @@
      "exception": false,
      "start_time": "2024-03-22T02:08:59.179729",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "outputs": [],
    "source": [
@@ -446,15 +388,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "e9135cdc",
+   "execution_count": null,
+   "id": "79086e5d",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-22T02:08:59.207908Z",
-     "iopub.status.busy": "2024-03-22T02:08:59.207247Z",
-     "iopub.status.idle": "2024-03-22T02:08:59.213685Z",
-     "shell.execute_reply": "2024-03-22T02:08:59.213028Z"
-    },
     "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.014033,
@@ -462,8 +398,7 @@
      "exception": false,
      "start_time": "2024-03-22T02:08:59.201343",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "outputs": [],
    "source": [
@@ -488,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9dad63e",
+   "id": "86315f1b",
    "metadata": {
     "papermill": {
      "duration": 0.004951,
@@ -496,8 +431,7 @@
      "exception": false,
      "start_time": "2024-03-22T02:08:59.221161",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "source": [
     "Striver: Pascal's triangle\n",
@@ -508,15 +442,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "afb5ce4e",
+   "execution_count": null,
+   "id": "d8a93518",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-22T02:08:59.237577Z",
-     "iopub.status.busy": "2024-03-22T02:08:59.236959Z",
-     "iopub.status.idle": "2024-03-22T02:08:59.243025Z",
-     "shell.execute_reply": "2024-03-22T02:08:59.242388Z"
-    },
     "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.013595,
@@ -524,8 +452,7 @@
      "exception": false,
      "start_time": "2024-03-22T02:08:59.231107",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "outputs": [],
    "source": [
@@ -542,15 +469,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "95a10c45",
+   "execution_count": null,
+   "id": "3936a59e",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-22T02:08:59.257234Z",
-     "iopub.status.busy": "2024-03-22T02:08:59.256639Z",
-     "iopub.status.idle": "2024-03-22T02:08:59.268557Z",
-     "shell.execute_reply": "2024-03-22T02:08:59.267940Z"
-    },
     "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.019546,
@@ -558,8 +479,7 @@
      "exception": false,
      "start_time": "2024-03-22T02:08:59.250730",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "outputs": [],
    "source": [
@@ -616,7 +536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d584c67",
+   "id": "e839124e",
    "metadata": {
     "papermill": {
      "duration": 0.005012,
@@ -624,8 +544,7 @@
      "exception": false,
      "start_time": "2024-03-22T02:08:59.276475",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "source": [
     "Leetcode Weekly contest - 17th March"
@@ -633,15 +552,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "34ff1d0a",
+   "execution_count": null,
+   "id": "e6574b26",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-22T02:08:59.294290Z",
-     "iopub.status.busy": "2024-03-22T02:08:59.293443Z",
-     "iopub.status.idle": "2024-03-22T02:08:59.299250Z",
-     "shell.execute_reply": "2024-03-22T02:08:59.298639Z"
-    },
     "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.013475,
@@ -649,8 +562,7 @@
      "exception": false,
      "start_time": "2024-03-22T02:08:59.287482",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "outputs": [],
    "source": [
@@ -670,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeb795a8",
+   "id": "f12cafc3",
    "metadata": {
     "papermill": {
      "duration": 0.004921,
@@ -678,8 +590,7 @@
      "exception": false,
      "start_time": "2024-03-22T02:08:59.306586",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "source": [
     "zz - z, z, zz (3)\n",
@@ -690,15 +601,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "4e21989e",
+   "execution_count": null,
+   "id": "589d1561",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-22T02:08:59.322934Z",
-     "iopub.status.busy": "2024-03-22T02:08:59.322492Z",
-     "iopub.status.idle": "2024-03-22T02:08:59.327578Z",
-     "shell.execute_reply": "2024-03-22T02:08:59.326868Z"
-    },
     "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.012771,
@@ -706,8 +611,7 @@
      "exception": false,
      "start_time": "2024-03-22T02:08:59.316490",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "outputs": [],
    "source": [
@@ -726,15 +630,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "71dd8ae2",
+   "execution_count": null,
+   "id": "a0a48e4b",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-22T02:08:59.341090Z",
-     "iopub.status.busy": "2024-03-22T02:08:59.340837Z",
-     "iopub.status.idle": "2024-03-22T02:08:59.347675Z",
-     "shell.execute_reply": "2024-03-22T02:08:59.347006Z"
-    },
     "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.014401,
@@ -742,8 +640,7 @@
      "exception": false,
      "start_time": "2024-03-22T02:08:59.334948",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "outputs": [],
    "source": [
@@ -772,7 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32c6f9ab",
+   "id": "acd2120e",
    "metadata": {
     "papermill": {
      "duration": 0.005034,
@@ -780,8 +677,7 @@
      "exception": false,
      "start_time": "2024-03-22T02:08:59.355495",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "source": [
     "Leetcode Weekly contest - 17th March\n",
@@ -790,23 +686,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "9a3f57c3",
+   "execution_count": null,
+   "id": "f7960549",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-22T02:08:59.372052Z",
-     "iopub.status.busy": "2024-03-22T02:08:59.371580Z",
-     "iopub.status.idle": "2024-03-22T02:08:59.378953Z",
-     "shell.execute_reply": "2024-03-22T02:08:59.378244Z"
-    },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.015053,
      "end_time": "2024-03-22T02:08:59.380677",
      "exception": false,
      "start_time": "2024-03-22T02:08:59.365624",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "outputs": [],
    "source": [
@@ -842,6 +732,168 @@
     "assert Solution().search([4,5,6,7,0,1,2], 3) == -1\n",
     "assert Solution().search([1], 0) == -1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d00645d",
+   "metadata": {},
+   "source": [
+    "Leetcode weekly contest 24th March, 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4115c1b7",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q1 - Easy\n",
+    "class Solution:\n",
+    "    def maximumLengthSubstring(self, s: str) -> int:\n",
+    "        # Brute force\n",
+    "        N = len(s)\n",
+    "        max_ = 0\n",
+    "        for i in range(N - 1):\n",
+    "            counts = {s[i]: 1}\n",
+    "            for j in range(i + 1, N):\n",
+    "                curr_count = counts.get(s[j], 0) + 1\n",
+    "                if curr_count > 2:\n",
+    "                    break\n",
+    "                else:\n",
+    "                    counts[s[j]] = curr_count\n",
+    "                    max_ = max(max_, j - i + 1)\n",
+    "        return max_\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().maximumLengthSubstring(\"bcbbbcba\") == 4\n",
+    "assert Solution().maximumLengthSubstring(\"aaaa\") == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d41b9204",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q2 - Medium\n",
+    "class Solution:\n",
+    "    def minOperations(self, k: int) -> int:\n",
+    "        \"Can be optimized with binary search\"\n",
+    "        min_ = k - 1\n",
+    "        for i in range(1, k):\n",
+    "            curr = i + math.ceil(k / i) - 2\n",
+    "            if curr < min_:\n",
+    "                min_ = curr\n",
+    "\n",
+    "        return min_\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().minOperations(11) == 5\n",
+    "assert Solution().minOperations(1) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51f6c341",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q3 - Medium (Timeout)\n",
+    "class Solution:\n",
+    "    def mostFrequentIDs(self, nums: list[int], freq: list[int]) -> list[int]:\n",
+    "        \"Brute force: O(N^2)\"\n",
+    "        N = len(nums)\n",
+    "        counter = dict()\n",
+    "        result: list[int] = []\n",
+    "        for i in range(N):\n",
+    "            counter[nums[i]] = counter.get(nums[i], 0) + freq[i]\n",
+    "            curr_max = max(counter.items(), key=lambda x: x[1])\n",
+    "            result.append(curr_max[1])\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().mostFrequentIDs([5,5,3], [2,-2,1]) == [2, 0, 1]\n",
+    "assert Solution().mostFrequentIDs([2,3,2,1], [3,2,-3,1]) == [3,3,2,2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f581903e",
+   "metadata": {
+    "papermill": {
+     "duration": 0.005355,
+     "end_time": "2024-03-24T15:58:51.360878",
+     "exception": false,
+     "start_time": "2024-03-24T15:58:51.355523",
+     "status": "completed"
+    }
+   },
+   "source": [
+    "Category: Medium\n",
+    "Video Link: https://leetcode.com/problems/find-the-duplicate-number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08bb3876",
+   "metadata": {
+    "papermill": {
+     "duration": 0.015936,
+     "end_time": "2024-03-24T15:58:51.382319",
+     "exception": false,
+     "start_time": "2024-03-24T15:58:51.366383",
+     "status": "completed"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def findDuplicate_(self, nums: list[int]) -> int:\n",
+    "        # Time - O(N log N)\n",
+    "        nums.sort()\n",
+    "\n",
+    "        # Time - O(N)\n",
+    "        for i in range(len(nums) -1):\n",
+    "            if nums[i] == nums[i + 1]:\n",
+    "                return nums[i]\n",
+    "\n",
+    "        return -1\n",
+    "\n",
+    "    def findDuplicate(self, nums: list[int]) -> int:\n",
+    "        def backtrack(start: int) -> None | int:\n",
+    "            next_ = nums[start]\n",
+    "            if next_ == -1:\n",
+    "                return start\n",
+    "            else:\n",
+    "                nums[start] = -1\n",
+    "                return backtrack(next_)\n",
+    "\n",
+    "        for i in range(len(nums)):\n",
+    "            if nums[i] == i:\n",
+    "                nums[i] = -1\n",
+    "            else:\n",
+    "                curr = backtrack(nums[i])\n",
+    "                if curr is not None:\n",
+    "                    return curr\n",
+    "        else:\n",
+    "            return -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().findDuplicate([1,3,4,2,2]) == 2\n",
+    "assert Solution().findDuplicate([3,1,3,4,2]) == 3\n",
+    "assert Solution().findDuplicate([3,3,3,3,3]) == 3"
+   ]
   }
  ],
  "metadata": {
@@ -849,30 +901,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.13"
-  },
-  "papermill": {
-   "default_parameters": {},
-   "duration": 2.465171,
-   "end_time": "2024-03-22T02:08:59.603086",
-   "environment_variables": {},
-   "exception": null,
-   "input_path": "practice/001.ipynb",
-   "output_path": "practice/001.ipynb",
-   "parameters": {},
-   "start_time": "2024-03-22T02:08:57.137915",
-   "version": "2.4.0"
   }
  },
  "nbformat": 4,
