Striver A2Z: Binary Search - 7

--- a/study/striver-A2Z/09-binary-search.ipynb
+++ b/study/striver-A2Z/09-binary-search.ipynb
@@ -1442,6 +1442,7 @@
      "iopub.status.idle": "2024-03-24T01:55:56.857301Z",
      "shell.execute_reply": "2024-03-24T01:55:56.856470Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.052861,
      "end_time": "2024-03-24T01:55:56.859021",
@@ -1492,6 +1493,156 @@
     "# Testing the solution\n",
     "for i in tqdm.tqdm(range(int(1e4))):\n",
     "    assert floorSqrt(i) == int(math.sqrt(i))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21ab1eeb",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=rjEJeYCasHs&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=55\n",
+    "Find Nth root of an integer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e8ba6e9",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Brute force\n",
+    "def NthRoot_brute(n: int, m: int) -> int:\n",
+    "    \"Brute force - O(m * n)\"\n",
+    "    for i in range(m):\n",
+    "        curr = 1\n",
+    "        for _ in range(n):\n",
+    "            curr *= i\n",
+    "            if curr > m:\n",
+    "                break\n",
+    "        if curr == m:\n",
+    "            return i\n",
+    "        elif curr > m:\n",
+    "            break\n",
+    "    return -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert NthRoot_brute(3, 27) == 3\n",
+    "assert NthRoot_brute(4, 69) == -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "accd0d1c",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Optimal - Binary Search\n",
+    "def NthRoot_binary(n: int, m: int) -> int:\n",
+    "    \"Using binary search - O(log m * n)\"\n",
+    "    low, high = 0, m\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "\n",
+    "        curr = 1\n",
+    "        for _ in range(n):\n",
+    "            curr *= mid\n",
+    "            if curr > m:\n",
+    "                break\n",
+    "\n",
+    "        if curr == m:\n",
+    "            return mid\n",
+    "        elif curr < m:\n",
+    "            low = mid + 1\n",
+    "        else:\n",
+    "            high = mid - 1\n",
+    "\n",
+    "    return -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert NthRoot_binary(3, 27) == 3\n",
+    "assert NthRoot_binary(4, 69) == -1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "201c8d96",
+   "metadata": {},
+   "source": [
+    "Video link: https://youtu.be/qyfekrNni90?si=N28mkp8Cyx4lvNIq  \n",
+    "Problem: Koko eating bananas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24fcadf8",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Brute force solution: O(v * h)\n",
+    "def minimumRateToEatBananas_brute(v: list[int], h: int) -> int:\n",
+    "    m, min_hours = 0, sum(v)\n",
+    "    while min_hours > h:\n",
+    "        m += 1\n",
+    "        min_hours = 0\n",
+    "        for p in v:\n",
+    "            min_hours += math.ceil(p / m)\n",
+    "\n",
+    "    return m\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minimumRateToEatBananas_brute([7, 15, 6, 3], 8) == 5\n",
+    "assert minimumRateToEatBananas_brute([25, 12, 8, 14, 19], 5) == 25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77605b2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Better solution\n",
+    "def minimumRateToEatBananas_better(v: list[int], h: int) -> int:\n",
+    "    def compute_hours(m: int) -> int:\n",
+    "        \"Assumes piles is sorted in asc order\"\n",
+    "        V = N # Copy N for modification\n",
+    "        hours = 0\n",
+    "        while v[V - 1] > m and V > 0:\n",
+    "            hours += math.ceil(v[V - 1] / m)\n",
+    "            V -= 1\n",
+    "\n",
+    "        return hours + V\n",
+    "\n",
+    "    N = len(v)\n",
+    "\n",
+    "    # Time: O(v log v)\n",
+    "    v.sort()\n",
+    "\n",
+    "    # Binary search\n",
+    "    low, high = 1, v[-1]\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        curr = compute_hours(mid)\n",
+    "        if curr > h:\n",
+    "            low = mid + 1\n",
+    "        else:\n",
+    "            high = mid - 1\n",
+    "\n",
+    "    return low\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minimumRateToEatBananas_better([9], 2) == 5\n",
+    "assert minimumRateToEatBananas_better([7, 15, 6, 3], 8) == 5\n",
+    "assert minimumRateToEatBananas_better([25, 12, 8, 14, 19], 5) == 25"
    ]
   }
  ],
