--- a/study/striver-A2Z/09-binary-search.ipynb
+++ b/study/striver-A2Z/09-binary-search.ipynb
@@ -1674,6 +1674,7 @@
      "iopub.status.idle": "2024-03-25T02:34:42.928999Z",
      "shell.execute_reply": "2024-03-25T02:34:42.928272Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.021565,
      "end_time": "2024-03-25T02:34:42.930790",
@@ -1718,6 +1719,159 @@
     "assert minimumRateToEatBananas_better([9], 2) == 5\n",
     "assert minimumRateToEatBananas_better([7, 15, 6, 3], 8) == 5\n",
     "assert minimumRateToEatBananas_better([25, 12, 8, 14, 19], 5) == 25"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81512acb",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=TXAuxeYBTdg&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=57\n",
+    "Minimum days to make M boquets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76ca4e35",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Solution link: https://leetcode.com/problems/minimum-number-of-days-to-make-m-bouquets/submissions/1213963810\n",
+    "class Solution:\n",
+    "    def minDays(self, bloomDay: list[int], m: int, k: int) -> int:\n",
+    "        def countBoquets(day: int) -> int:\n",
+    "            \"Count boquets in O(N) time\"\n",
+    "            flower_count, boquet_count = 0, 0\n",
+    "            for i in range(N):\n",
+    "                if bloomDay[i] <= day:\n",
+    "                    flower_count += 1\n",
+    "                else:\n",
+    "                    flower_count = 0\n",
+    "\n",
+    "                if flower_count == k:\n",
+    "                    boquet_count += 1\n",
+    "                    flower_count = 0\n",
+    "\n",
+    "            return boquet_count\n",
+    "\n",
+    "        N = len(bloomDay)\n",
+    "\n",
+    "        answer_range = sorted(set(bloomDay))\n",
+    "        answer_range_length = len(answer_range)\n",
+    "        low, high = 0, answer_range_length - 1\n",
+    "        while low <= high:\n",
+    "            mid = (low + high) // 2\n",
+    "            boquet_count = countBoquets(answer_range[mid])\n",
+    "            if boquet_count >= m:\n",
+    "                high = mid - 1\n",
+    "            else:\n",
+    "                low = mid + 1\n",
+    "\n",
+    "        return answer_range[low] if low < answer_range_length else -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().minDays([1,10,3,10,2], 3, 1) == 3\n",
+    "assert Solution().minDays([1,10,3,10,2], 3, 2) == -1\n",
+    "assert Solution().minDays([7,7,7,7,12,7,7], 2, 3) == 12"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03f3ffa2",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=UvBKTVaG6U8&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=58\n",
+    "Smallest divisor given the threshold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbac3ba5",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Solution Link: https://leetcode.com/problems/find-the-smallest-divisor-given-a-threshold/submissions/1213975584\n",
+    "class Solution:\n",
+    "    def smallestDivisor(self, nums: list[int], threshold: int) -> int:\n",
+    "        def calcThresh(divisor: int) -> int:\n",
+    "            thresh = 0\n",
+    "            for n in nums:\n",
+    "                thresh += math.ceil(n / divisor)\n",
+    "            return thresh\n",
+    "\n",
+    "        N = len(nums)\n",
+    "        low, high = 1, max(nums)\n",
+    "        while low <= high:\n",
+    "            mid = (low + high) // 2\n",
+    "            if calcThresh(mid) <= threshold:\n",
+    "                high = mid - 1\n",
+    "            else:\n",
+    "                low = mid + 1\n",
+    "\n",
+    "        return low\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().smallestDivisor([1,2,5,9], 6) == 5\n",
+    "assert Solution().smallestDivisor([44,22,33,11,1], 5) == 44\n",
+    "assert Solution().smallestDivisor([21212,10101,12121], 1000000) == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01e65497",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=MG-Ac4TAvTY&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=59\n",
+    "Capacity to ship packages in D Days"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48336458",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Problem link: https://leetcode.com/problems/capacity-to-ship-packages-within-d-days/submissions/1214006136\n",
+    "class Solution:\n",
+    "    def shipWithinDays(self, weights: list[int], days: int) -> int:\n",
+    "        def countDays(capacity: int) -> int:\n",
+    "            day_count = 0\n",
+    "            weight = 0\n",
+    "            for w in weights:\n",
+    "                if weight + w <= capacity:\n",
+    "                    weight += w\n",
+    "                else:\n",
+    "                    day_count += 1\n",
+    "                    weight = w\n",
+    "\n",
+    "            return day_count + 1\n",
+    "\n",
+    "        # Sort the weights\n",
+    "        N = len(weights)\n",
+    "\n",
+    "        # Min, max possibile answer - Binary search\n",
+    "        low, high = max(weights), sum(weights)\n",
+    "        while low <= high:\n",
+    "            mid = (low + high) // 2\n",
+    "            day_count = countDays(mid)\n",
+    "            if day_count <= days:\n",
+    "                high = mid - 1\n",
+    "            else:\n",
+    "                low = mid + 1\n",
+    "\n",
+    "        return low\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().shipWithinDays([1,2,3,4,5,6,7,8,9,10], 5) == 15\n",
+    "assert Solution().shipWithinDays([3,2,2,4,1,4], 3) == 6\n",
+    "assert Solution().shipWithinDays([1,2,3,1,1], 4) == 3"
    ]
   }
  ],
