Striver A2Z: Binary Search - 9

--- a/study/striver-A2Z/09-binary-search.ipynb
+++ b/study/striver-A2Z/09-binary-search.ipynb
@@ -1897,6 +1897,7 @@
      "iopub.status.idle": "2024-03-26T03:05:10.516110Z",
      "shell.execute_reply": "2024-03-26T03:05:10.515439Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.024815,
      "end_time": "2024-03-26T03:05:10.517783",
@@ -1942,6 +1943,71 @@
     "assert Solution().shipWithinDays([1,2,3,4,5,6,7,8,9,10], 5) == 15\n",
     "assert Solution().shipWithinDays([3,2,2,4,1,4], 3) == 6\n",
     "assert Solution().shipWithinDays([1,2,3,1,1], 4) == 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a0d2642",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=uZ0N_hZpyps&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=60\n",
+    "Kth missing +ve number: https://leetcode.com/problems/kth-missing-positive-number/submissions/1215199274/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdbc80fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Linear run time solution\n",
+    "class Solution:\n",
+    "    def findKthPositive_brute(self, arr: list[int], k: int) -> int:\n",
+    "        \"Brute force: Time - O(N), Space - O(N)\"\n",
+    "        present: set[int] = set(arr)\n",
+    "        max_ = arr[-1] + k\n",
+    "        for i in range(1, max_ + 1):\n",
+    "            if i not in present:\n",
+    "                k -= 1\n",
+    "            if k == 0:\n",
+    "                break\n",
+    "        return i\n",
+    "\n",
+    "    def findKthPositive_better(self, arr: list[int], k: int) -> int:\n",
+    "        \"Striver Better solution: Time - O(N), Space - O(1)\"\n",
+    "        for n in arr:\n",
+    "            if n <= k:\n",
+    "                k += 1\n",
+    "            else:\n",
+    "                break\n",
+    "        return k\n",
+    "\n",
+    "    def findKthPositive(self, arr: list[int], k: int) -> int:\n",
+    "        \"\"\"\n",
+    "        Optimal - Binary search: Time - O(log N)\n",
+    "        Primary Observation: Count of missing elements prior to index: arr[idx] - idx - 1.\n",
+    "        This is because if there were no missing elements, at any idx the number should be idx + 1.\n",
+    "\n",
+    "        With this logic in mind, we can apply binary search.\n",
+    "        \"\"\"\n",
+    "        N = len(arr)\n",
+    "        low, high = 0, N - 1\n",
+    "        while low <= high:\n",
+    "            mid = (low + high) // 2\n",
+    "            missing_count = arr[mid] - mid - 1\n",
+    "            if missing_count < k:\n",
+    "                low = mid + 1\n",
+    "            else:\n",
+    "                high = mid - 1\n",
+    "\n",
+    "        # arr[high] + more \n",
+    "        # arr[high] + k - missing \n",
+    "        # arr[high] + k - arr[high] + high + 1\n",
+    "        return high + k + 1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().findKthPositive([2, 3, 4, 7, 11], 5) == 9"
    ]
   }
  ],
