Striver A2Z: Binary Search - 10

--- a/study/striver-A2Z/09-binary-search.ipynb
+++ b/study/striver-A2Z/09-binary-search.ipynb
@@ -1974,6 +1974,7 @@
      "iopub.status.idle": "2024-03-27T07:44:42.926303Z",
      "shell.execute_reply": "2024-03-27T07:44:42.925679Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.02612,
      "end_time": "2024-03-27T07:44:42.928080",
@@ -2032,6 +2033,129 @@
     "\n",
     "# Testing the solution\n",
     "assert Solution().findKthPositive([2, 3, 4, 7, 11], 5) == 9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5275fb71",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=R_Mfw4ew-Vo&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=61"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8139b363",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Brute force: ~ O(2 ^ N)\n",
+    "def aggressiveCows(stalls: list[int], k: int) -> int:\n",
+    "    def compute_min_distance(placement: tuple[int]) -> int:\n",
+    "        dist = stalls[-1] - stalls[0]\n",
+    "        for i in range(k - 1):\n",
+    "            dist = min(dist, placement[i + 1] - placement[i])\n",
+    "\n",
+    "        return dist\n",
+    "\n",
+    "    # Sort the stalls so that the min dist would always be between 2 consequtive stalls\n",
+    "    stalls.sort()\n",
+    "\n",
+    "    # Generate all subsequences\n",
+    "    result = 0\n",
+    "    for placement in itertools.combinations(stalls, k):\n",
+    "        result = max(result, compute_min_distance(placement))\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert aggressiveCows([0, 3, 4, 7, 10, 9], 4) == 3\n",
+    "assert aggressiveCows([4, 2, 1, 3, 6], 2) == 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba2f0950",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Better: ~ O(N ^ 2) \n",
+    "def aggressiveCows(stalls: list[int], k: int) -> int:\n",
+    "    stalls.sort()\n",
+    "\n",
+    "    N = len(stalls)\n",
+    "\n",
+    "    distances = []\n",
+    "    for i in range(N - 1):\n",
+    "        distances.append(stalls[i + 1] - stalls[i])\n",
+    "\n",
+    "    # Eliminate N - k stalls\n",
+    "    for i in range(N - k):\n",
+    "        # Find min dist idx\n",
+    "        min_ = 0\n",
+    "        for j in range(N - i - 1):\n",
+    "            if distances[j] < distances[min_]:\n",
+    "                min_ = j\n",
+    "        # Combine with the smaller value\n",
+    "        if min_ == 0 or (min_ < N - i - 2 and distances[min_ + 1] < distances[min_ - 1]):\n",
+    "            distances[min_ + 1] += distances[min_]\n",
+    "        else:\n",
+    "            distances[min_ - 1] += distances[min_]\n",
+    "\n",
+    "        # Remove that distance\n",
+    "        distances.pop(min_)\n",
+    "\n",
+    "    return min(distances)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert aggressiveCows([0, 3, 4, 7, 10, 9], 4) == 3\n",
+    "assert aggressiveCows([4, 2, 1, 3, 6], 2) == 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64f42a77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optimal Striver: O(N log N)\n",
+    "def aggressiveCows(stalls: list[int], k: int) -> int:\n",
+    "    def place_cows(dist: int) -> bool:\n",
+    "        \"Place k cows with a min of k dist (>= dist)\"\n",
+    "\n",
+    "        # Place 1st cow at idx 0\n",
+    "        k_, prev = k - 1, 0\n",
+    "        for i in range(1, N):\n",
+    "            if stalls[i] - stalls[prev] >= dist:\n",
+    "                prev = i\n",
+    "                k_ -= 1\n",
+    "            if k_ == 0:\n",
+    "                break\n",
+    "\n",
+    "        return k_ == 0\n",
+    "\n",
+    "    N = len(stalls)\n",
+    "    stalls.sort()\n",
+    "\n",
+    "    low, high = 1, stalls[-1] - stalls[0]\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        if place_cows(mid):\n",
+    "            low = mid + 1\n",
+    "        else:\n",
+    "            high = mid - 1\n",
+    "\n",
+    "    return high\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert aggressiveCows([0, 3, 4, 7, 10, 9], 4) == 3\n",
+    "assert aggressiveCows([4, 2, 1, 3, 6], 2) == 5"
    ]
   }
  ],
