--- a/study/striver-A2Z/09-binary-search.ipynb
+++ b/study/striver-A2Z/09-binary-search.ipynb
@@ -2165,6 +2165,7 @@
      "iopub.status.idle": "2024-03-28T02:15:11.779687Z",
      "shell.execute_reply": "2024-03-28T02:15:11.778945Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.024473,
      "end_time": "2024-03-28T02:15:11.781335",
@@ -2208,6 +2209,212 @@
     "# Testing the solution\n",
     "assert aggressiveCows([0, 3, 4, 7, 10, 9], 4) == 3\n",
     "assert aggressiveCows([4, 2, 1, 3, 6], 2) == 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6415f70",
+   "metadata": {},
+   "source": [
+    "Video link: https://www.youtube.com/watch?v=Z0hwjftStI4&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=62"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e6344ff",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Brute force solution, Time, Space: O(N!)\n",
+    "def findPages(arr: list[int], n: int, m: int) -> float:\n",
+    "    N = len(arr)\n",
+    "\n",
+    "    @functools.cache\n",
+    "    def backtrack(start: int, n_students: int) -> float:\n",
+    "        if n_students == 1:\n",
+    "            return sum(arr[start:])\n",
+    "\n",
+    "        else:\n",
+    "            result = math.inf\n",
+    "            sum_ = 0\n",
+    "            for i in range(start, N - n_students + 1):\n",
+    "                sum_ += arr[i]\n",
+    "                result = min(result, max(sum_, backtrack(i + 1, n_students - 1)))\n",
+    "\n",
+    "            return result\n",
+    "\n",
+    "    result = backtrack(0, m)\n",
+    "    return -1 if math.isinf(result) else result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findPages([12, 34, 67, 90], 4, 2) == 113\n",
+    "assert findPages([25, 46, 28, 49, 24], 5, 4) == 71"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "569cb019",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Optimal - Binary search, Time - O(N log N)\n",
+    "def findPages(arr: list[int], n: int, m: int) -> float:\n",
+    "    N = len(arr)\n",
+    "\n",
+    "    def assign(maxPages: int) -> bool:\n",
+    "        \"\"\"\n",
+    "        Logic for this is more crucial than binary search itself.\n",
+    "\n",
+    "        Tip: Splits, Subarrays (contiguous).\n",
+    "\n",
+    "        To check if the maxPages is possible we GREEDILY assign as much as\n",
+    "        possible to each guy before moving to the next guy.\n",
+    "        \"\"\"\n",
+    "        n_std, curr = 1, 0\n",
+    "        for i in range(N):\n",
+    "            if curr + arr[i] <= maxPages:\n",
+    "                curr += arr[i]\n",
+    "            else:\n",
+    "                n_std, curr = n_std + 1, arr[i]\n",
+    "\n",
+    "        return n_std <= m\n",
+    "\n",
+    "    if N < m:\n",
+    "        return -1\n",
+    "    else:\n",
+    "        low, high = max(arr), sum(arr)\n",
+    "        while low <= high:\n",
+    "            mid = (low + high) // 2\n",
+    "            if assign(mid):\n",
+    "                high = mid - 1\n",
+    "            else:\n",
+    "                low = mid + 1\n",
+    "\n",
+    "        return low\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findPages([12, 34, 67, 90], 4, 2) == 113\n",
+    "assert findPages([25, 46, 28, 49, 24], 5, 4) == 71\n",
+    "assert findPages([2, 8, 8, 4, 5], 5, 6) == -1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "693edc5b",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=thUd_WJn6wk&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=63\n",
+    "Problem Link: https://leetcode.com/problems/split-array-largest-sum/submissions/1216912768"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f94d583",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def splitArray(self, nums: list[int], k: int) -> int:\n",
+    "        N = len(nums)\n",
+    "\n",
+    "        def countSplits(max_: int) -> bool:\n",
+    "            \"\"\"\n",
+    "            Greedily assign as much as possible to each guy before moving forward.\n",
+    "            Same logic as the problem above. Remember only applicable for contigous\n",
+    "            array slices: subarrays, splits, etc.\n",
+    "            \"\"\"\n",
+    "            n_splits, sum_ = 1, 0\n",
+    "            for i in range(N):\n",
+    "                if sum_ + nums[i] <= max_:\n",
+    "                    sum_ += nums[i]\n",
+    "                else:\n",
+    "                    n_splits, sum_ = n_splits + 1, nums[i]\n",
+    "\n",
+    "            return n_splits <= k\n",
+    "\n",
+    "        if k > N:\n",
+    "            return -1\n",
+    "        else:\n",
+    "            low, high = max(nums), sum(nums)\n",
+    "            while low <= high:\n",
+    "                mid = (low + high) // 2\n",
+    "                if countSplits(mid):\n",
+    "                    high = mid - 1\n",
+    "                else:\n",
+    "                    low = mid + 1\n",
+    "\n",
+    "            return low\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().splitArray([7,2,5,10,8], 2) == 18\n",
+    "assert Solution().splitArray([1, 2, 3, 4, 5], 2) == 9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b17280b3",
+   "metadata": {},
+   "source": [
+    "Video link: https://www.youtube.com/watch?v=kMSBvlZ-_HA&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b31b6aea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def minimiseMaxDistance(arr: list[int], k: float) -> float:\n",
+    "\n",
+    "    def check(thresh: float) -> bool:\n",
+    "        \"\"\"\n",
+    "        If curr_dist is > thresh, try to split just until dist = thresh\n",
+    "\n",
+    "        >>> curr_dist / (n + 1) == thresh\n",
+    "        >>> curr_dist / thresh - 1 = n \n",
+    "        \"\"\"\n",
+    "\n",
+    "        n_splits = 0\n",
+    "        for i in range(N - 1):\n",
+    "            curr_dist = arr[i + 1] - arr[i]\n",
+    "            if curr_dist > thresh:\n",
+    "                # Ceil without using math.ceil => -(-x // 1)\n",
+    "                splits_required = -(-curr_dist // thresh) - 1\n",
+    "                n_splits += int(splits_required)\n",
+    "\n",
+    "        return n_splits <= k\n",
+    "\n",
+    "    N = len(arr)\n",
+    "    max_dist = 0.\n",
+    "    for i in range(N - 1):\n",
+    "        max_dist = max(max_dist, arr[i + 1] - arr[i])\n",
+    "\n",
+    "    low, high = 0., max_dist\n",
+    "    while low < high:\n",
+    "        mid = round((low + high) / 2, 7)\n",
+    "        if mid == high or low == mid:\n",
+    "            break\n",
+    "        if check(mid):\n",
+    "            high = mid\n",
+    "        else:\n",
+    "            low = mid\n",
+    "\n",
+    "    return low\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert round(minimiseMaxDistance([1, 2, 3, 4, 5], 4), 6) == 0.5\n",
+    "assert round(minimiseMaxDistance([1, 2, 5], 4), 6) == 0.75\n",
+    "assert round(minimiseMaxDistance([1, 3], 2), 6) == 0.666667"
    ]
   }
  ],
