Striver BS, LC Weekly #391

--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -1017,6 +1017,7 @@
      "iopub.status.idle": "2024-03-25T00:26:32.056755Z",
      "shell.execute_reply": "2024-03-25T00:26:32.055972Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.016591,
      "end_time": "2024-03-25T00:26:32.058346",
@@ -1063,6 +1064,116 @@
     "assert Solution().findDuplicate([1,3,4,2,2]) == 2\n",
     "assert Solution().findDuplicate([3,1,3,4,2]) == 3\n",
     "assert Solution().findDuplicate([3,3,3,3,3]) == 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18a3ddfa",
+   "metadata": {},
+   "source": [
+    "#### Leetcode Contest: 31st March 2024 (# 391)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94eae322",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q1 - Easy\n",
+    "class Solution:\n",
+    "    def sumOfTheDigitsOfHarshadNumber(self, x: int) -> int:\n",
+    "        result = sum(map(int, str(x)))\n",
+    "        if x % result == 0:\n",
+    "            return result\n",
+    "        else:\n",
+    "            return -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3820ddc5",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q2 - Medium\n",
+    "class Solution:\n",
+    "    def maxBottlesDrunk(self, numBottles: int, numExchange: int) -> int:\n",
+    "        def exchange(empty: int, exchange: int) -> tuple[int, int, int]:\n",
+    "            \"\"\"\n",
+    "            Given count of empty bottles and start exchange rate,\n",
+    "            returns number of full bottles we can form and the updated exchange rate\n",
+    "\n",
+    "            For eg:\n",
+    "\n",
+    "            empty = 10, exchange = 1\n",
+    "\n",
+    "             E, R, F\n",
+    "            10, 1, 0\n",
+    "            9,  2, 1\n",
+    "            7,  3, 2\n",
+    "            4,  4, 3\n",
+    "            0,  5, 4\n",
+    "\n",
+    "            empty = 9, exchange = 1\n",
+    "\n",
+    "            E, R, F\n",
+    "            9, 1, 0\n",
+    "            8, 2, 1\n",
+    "            6, 3, 2\n",
+    "            3, 4, 3\n",
+    "\n",
+    "            \"\"\"\n",
+    "            filled = 0\n",
+    "            while empty >= exchange:\n",
+    "                empty -= exchange\n",
+    "                exchange += 1\n",
+    "                filled += 1\n",
+    "\n",
+    "            return empty, exchange, filled\n",
+    "\n",
+    "        total = empty = 0\n",
+    "        while numBottles:\n",
+    "            total += numBottles\n",
+    "            empty, numBottles = empty + numBottles, 0\n",
+    "            empty, numExchange, numBottles = exchange(empty, numExchange)\n",
+    "\n",
+    "        return total\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().maxBottlesDrunk(10, 3) == 13\n",
+    "assert Solution().maxBottlesDrunk(13, 6) == 15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76322274",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q3 - Medium\n",
+    "class Solution:\n",
+    "    def countAlternatingSubarrays(self, nums: list[int]) -> int:\n",
+    "        count, curr, N = 0, 0, len(nums)\n",
+    "        for i in range(N + 1):\n",
+    "            if i == 0 or (i < N and nums[i - 1] != nums[i]):\n",
+    "                curr += 1\n",
+    "            else:\n",
+    "                count += (curr * (curr + 1)) // 2\n",
+    "                curr = 1\n",
+    "\n",
+    "        return count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().countAlternatingSubarrays([1,0,1,0]) == 10\n",
+    "assert Solution().countAlternatingSubarrays( [0,1,1,1]) == 5"
    ]
   }
  ],
