--- a/study/striver-A2Z/09-binary-search.ipynb
+++ b/study/striver-A2Z/09-binary-search.ipynb
@@ -2800,6 +2800,7 @@
      "iopub.status.idle": "2024-03-30T12:53:46.723149Z",
      "shell.execute_reply": "2024-03-30T12:53:46.722453Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.030651,
      "end_time": "2024-03-30T12:53:46.724878",
@@ -2829,13 +2830,18 @@
     "        l2 = nums2[mid2 - 1] if mid2 > 0 else -math.inf\n",
     "        r1 = nums1[mid1] if mid1 < N1 else math.inf\n",
     "        r2 = nums2[mid2] if mid2 < N2 else math.inf\n",
+    "\n",
     "        if l1 <= r2 and l2 <= r1:\n",
     "            if N % 2 == 0:\n",
     "                return (max(l1, l2) + min(r1, r2)) / 2\n",
     "            else:\n",
     "                return max(l1, l2)\n",
+    "\n",
+    "        # Smaller array is not centered, arr1 is on the left part\n",
     "        elif l1 > r2:\n",
     "            high = mid1 - 1\n",
+    "\n",
+    "        # (l2 > r1) Larger array is not centered, arr2 is on the right part (arr1 is on the left part)\n",
     "        else:\n",
     "            low = mid1 + 1\n",
     "\n",
@@ -2844,6 +2850,132 @@
     "# Testing the solution\n",
     "assert median([1, 3], [2]) == 2\n",
     "assert median([1, 2], [3, 4]) == 2.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ed3c9e0",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=D1oDwWCq50g&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=67\n",
+    "Find kth element of two sorted arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "394757ce",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Brute force - Time: O(M + N), Space: O(1)\n",
+    "def kthElement_brute(arr1: list[int], N1: int, arr2: list[int], N2: int, k: int) -> int:\n",
+    "    i = j = 0\n",
+    "    while i < N1 or j < N2:\n",
+    "        if j == N2 or (i < N1 and arr1[i] <= arr2[j]):\n",
+    "            curr = arr1[i]\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            curr = arr2[j]\n",
+    "            j += 1\n",
+    "\n",
+    "        k -= 1\n",
+    "        if k == 0:\n",
+    "            return curr\n",
+    "\n",
+    "    else:\n",
+    "        return -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert kthElement_brute([2, 3, 45], 3, [4, 6, 7, 8], 4, 4) == 6\n",
+    "assert kthElement_brute([1, 2, 3, 5, 6], 5, [4, 7, 8, 9, 100], 5, 6) == 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "633de9ca",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def kthElement(arr1: list[int], N1: int, arr2: list[int], N2: int, k: int) -> float:\n",
+    "    N1, N2 = len(arr1), len(arr2)\n",
+    "    N = N1 + N2\n",
+    "\n",
+    "    if N1 > N2:\n",
+    "        return kthElement(arr2, N2, arr1, N1, k)\n",
+    "\n",
+    "    left_length = k\n",
+    "    low, high = max(0, k - N2), min(N1, k)\n",
+    "    while low <= high:\n",
+    "        mid1 = (low + high + 1) // 2\n",
+    "        mid2 = left_length - mid1\n",
+    "        l1 = arr1[mid1 - 1] if mid1 > 0 else -math.inf\n",
+    "        l2 = arr2[mid2 - 1] if mid2 > 0 else -math.inf\n",
+    "        r1 = arr1[mid1] if mid1 < N1 else math.inf\n",
+    "        r2 = arr2[mid2] if mid2 < N2 else math.inf\n",
+    "\n",
+    "        if l1 <= r2 and l2 <= r1:\n",
+    "            return max(l1, l2)\n",
+    "        elif l1 > r2:\n",
+    "            high = mid1 - 1\n",
+    "        else: # l2 > r1\n",
+    "            low = mid1 + 1\n",
+    "\n",
+    "    else:\n",
+    "        return -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert kthElement([2, 3, 45], 3, [4, 6, 7, 8], 4, 4) == 6\n",
+    "assert kthElement([1, 2, 3, 5, 6], 5, [4, 7, 8, 9, 100], 5, 6) == 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfcc5868",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=SCz-1TtYxDI&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=68\n",
+    "Row with maximum number of 1s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16ce254c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Time complexity: O(n * log m)\n",
+    "def rowWithMax1s(matrix: list[list[int]], n: int, m: int) -> int:\n",
+    "    def count1s(row_idx: int) -> int:\n",
+    "        low, high = 0, m - 1\n",
+    "        while low <= high:\n",
+    "            mid = (low + high) // 2\n",
+    "            if matrix[row_idx][mid] == 1:\n",
+    "                high = mid - 1\n",
+    "            else:\n",
+    "                low = mid + 1\n",
+    "\n",
+    "        return m - low\n",
+    "\n",
+    "    # Row Idx, Count\n",
+    "    max_ = -1, 0\n",
+    "    for i in range(n):\n",
+    "        curr_count = count1s(i)\n",
+    "        if curr_count > max_[1]:\n",
+    "            max_ = i, curr_count\n",
+    "\n",
+    "    return max_[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert rowWithMax1s([[0], [0]], 2, 1) == -1\n",
+    "assert rowWithMax1s([[1, 1], [1, 1]], 2, 2) == 0\n",
+    "assert rowWithMax1s([[1, 1, 1], [0, 0, 1], [0, 0, 0]], 3, 3) == 0"
    ]
   }
  ],
