Striver BS: Binary Search - 14

--- a/study/striver-A2Z/09-binary-search.ipynb
+++ b/study/striver-A2Z/09-binary-search.ipynb
@@ -47,7 +47,8 @@
     "import heapq\n",
     "import tqdm\n",
     "import pdb\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import typing"
    ]
   },
   {
@@ -3000,6 +3001,7 @@
      "iopub.status.idle": "2024-03-31T04:08:07.859995Z",
      "shell.execute_reply": "2024-03-31T04:08:07.859255Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.027482,
      "end_time": "2024-03-31T04:08:07.861545",
@@ -3037,6 +3039,227 @@
     "assert rowWithMax1s([[0], [0]], 2, 1) == -1\n",
     "assert rowWithMax1s([[1, 1], [1, 1]], 2, 2) == 0\n",
     "assert rowWithMax1s([[1, 1, 1], [0, 0, 1], [0, 0, 0]], 3, 3) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "749c2af1",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=JXU4Akft7yk&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=69\n",
+    "Problem: Search in a 2D Matrix\n",
+    "Leetcode Link: https://leetcode.com/problems/search-a-2d-matrix/submissions/1219630053"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ffd05c3",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Brute force Solution, Time: O(M * N)\n",
+    "def searchMatrix_brute(matrix: list[list[int]], target: int) -> bool:\n",
+    "    M = len(matrix)\n",
+    "    N = len(matrix[0])\n",
+    "    for i in range(M):\n",
+    "        for j in range(N):\n",
+    "            if matrix[i][j] == target:\n",
+    "                return True\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2e9197e",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Optimal Solution, Time: O(log M + log N) = O(log MN)\n",
+    "def searchMatrix(matrix: list[list[int]], target: int) -> bool:\n",
+    "    M = len(matrix)\n",
+    "    N = len(matrix[0])\n",
+    "\n",
+    "    row_low, row_high = 0, M - 1\n",
+    "    while row_low <= row_high:\n",
+    "        row_mid = (row_low + row_high) // 2\n",
+    "\n",
+    "        # Check if present in this row\n",
+    "        if matrix[row_mid][0] <= target <= matrix[row_mid][N - 1]:\n",
+    "\n",
+    "            # Binary search inside to find the column idx\n",
+    "            col_low, col_high = 0, N - 1\n",
+    "            while col_low <= col_high:\n",
+    "                col_mid = (col_low + col_high) // 2\n",
+    "                if matrix[row_mid][col_mid] == target:\n",
+    "                    return True\n",
+    "                elif matrix[row_mid][col_mid] < target:\n",
+    "                    col_low = col_mid + 1\n",
+    "                else:\n",
+    "                    col_high = col_mid - 1\n",
+    "            else:\n",
+    "                return False\n",
+    "\n",
+    "        # If row[0] > target, search for row before curr\n",
+    "        elif matrix[row_mid][0] > target:\n",
+    "            row_high = row_mid - 1\n",
+    "\n",
+    "        # If row[-1] < target, search for row after curr\n",
+    "        else:\n",
+    "            row_low = row_mid + 1\n",
+    "\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "# Create a simple generator that returns random numbers in order\n",
+    "def generate_random_range() -> typing.Generator[int, bool, None]:\n",
+    "    \"Can be reset by sending in a `True` value\"\n",
+    "    i = 0\n",
+    "    while True:\n",
+    "        if random.random() > 0.5:\n",
+    "            reset = yield i\n",
+    "            if reset:\n",
+    "                yield True\n",
+    "                i = -1\n",
+    "        i += 1\n",
+    "\n",
+    "# Testing the solution\n",
+    "rand_gen = generate_random_range()\n",
+    "for i in tqdm.tqdm(range(100)):\n",
+    "\n",
+    "    temp: tuple[list[list[int]], int] = [[next(rand_gen) for j in range(5)] for i in range(5)], random.randint(1, 100)\n",
+    "    assert searchMatrix(temp[0], temp[1]) == searchMatrix_brute(temp[0], temp[1])\n",
+    "\n",
+    "    # Reset the random number generator\n",
+    "    rand_gen.send(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb866bec",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Striverr Optimal Solution, Time: O(log MN)\n",
+    "def searchMatrix_striverr(matrix: list[list[int]], target: int) -> bool:\n",
+    "    \"Idea is flatten the matrix into 1D conceptually and perform binary search\"\n",
+    "    M, N = len(matrix), len(matrix[0])\n",
+    "\n",
+    "    low, high = 0, M * N - 1\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        row, col = mid // M, mid % N\n",
+    "        if matrix[row][col] == target:\n",
+    "            return True\n",
+    "        elif matrix[row][col] < target:\n",
+    "            low = mid + 1\n",
+    "        else:\n",
+    "            high = mid - 1\n",
+    "\n",
+    "    return False\n",
+    "\n",
+    "# Testing the solution\n",
+    "for i in tqdm.tqdm(range(100)):\n",
+    "    temp: tuple[list[list[int]], int] = [[next(rand_gen) for j in range(5)] for i in range(5)], random.randint(1, 100) \n",
+    "    assert searchMatrix_striverr(temp[0], temp[1]) == searchMatrix(temp[0], temp[1])\n",
+    "    rand_gen.send(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95c1c00b",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=9ZbB397jU4k&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=71\n",
+    "Search in 2D matrix - II\n",
+    "Problem Link: https://leetcode.com/problems/search-a-2d-matrix-ii/submissions/1220185663"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4f067da",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def searchMatrix_II(matrix: list[list[int]], target: int) -> bool:\n",
+    "    \"\"\"\n",
+    "    1. Given two pairs, (i1, j1), (i2, j2): the 2D slice can only contain values\n",
+    "    between matrix[i1][j1] <= val <= matrix[i2][j2]\n",
+    "\n",
+    "    2. Take max of col, row. Split into half check if number can exist inside.\n",
+    "    If number can exist, recurse - searchFirst || searchSecond. Else don't check inside range.\n",
+    "    \"\"\"\n",
+    "    def is_present(i1: int, j1: int, i2: int, j2: int) -> bool:\n",
+    "        return i1 <= i2 and j1 <= j2 and (matrix[i1][j1] <= target <= matrix[i2][j2])\n",
+    "\n",
+    "    def binary_search(i1: int, j1: int, i2: int, j2: int):\n",
+    "        if is_present(i1, j1, i2, j2):\n",
+    "\n",
+    "            if i1 == i2 and j1 == j2:\n",
+    "                return matrix[i1][j1] == target\n",
+    "\n",
+    "            # Row length >= col length\n",
+    "            if i2 - i1 >= j2 - j1:\n",
+    "                mid = (i1 + i2) // 2\n",
+    "                recurse_ = binary_search(i1, j1, mid, j2) or binary_search(mid + 1, j1, i2, j2)\n",
+    "            else:\n",
+    "                mid = (j1 + j2) // 2\n",
+    "                recurse_ = binary_search(i1, j1, i2, mid) or binary_search(i1, mid + 1, i2, j2)\n",
+    "\n",
+    "            return recurse_\n",
+    "\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "    M, N = len(matrix), len(matrix[0])\n",
+    "    return binary_search(0, 0, M - 1, N - 1)\n",
+    "\n",
+    "for i in tqdm.tqdm(range(100)):\n",
+    "    temp = np.random.randint(1, 1000, size=(30, 30)), random.randint(1, 1000)\n",
+    "    temp[0].sort(axis=1)\n",
+    "    temp[0].sort(axis=0)\n",
+    "    assert searchMatrix_brute(temp[0], temp[1]) == searchMatrix_II(temp[0], temp[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f019b7cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Striver Optimal Solution\n",
+    "# Time - O(M + N)\n",
+    "def searchMatrix_II_striverr(matrix: list[list[int]], target: int) -> bool:\n",
+    "    M, N = len(matrix), len(matrix[0])\n",
+    "    col, row = N - 1, 0\n",
+    "    while row < M and col >= 0:\n",
+    "        curr = matrix[row][col]\n",
+    "        if  curr == target:\n",
+    "            return True\n",
+    "        elif target < curr:\n",
+    "            col -= 1\n",
+    "        else:\n",
+    "            row += 1\n",
+    "    return False\n",
+    "\n",
+    "# Testing the solution\n",
+    "for i in tqdm.tqdm(range(100)):\n",
+    "    temp = np.random.randint(1, 1000, size=(30, 30)), random.randint(1, 1000)\n",
+    "    temp[0].sort(axis=1)\n",
+    "    temp[0].sort(axis=0)\n",
+    "    assert searchMatrix_II(temp[0], temp[1]) == searchMatrix_II_striverr(temp[0], temp[1])"
    ]
   }
  ],
